client/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blockchain-client
  namespace: blockchain
  labels:
    app: blockchain-client
spec:
  selector:
    app: blockchain-client
  ports:
    - name: http
      port: 80
      targetPort: 8081
  type: ClusterIP
